Disabled SELinux by default, added Vim

--- a/templates/Fedora-19-x86_64/ks.cfg
+++ b/templates/Fedora-19-x86_64/ks.cfg
@@ -26,6 +26,7 @@ reboot
 %packages
 @core
 deltarpm
+vim
 
 %end
 
@@ -53,5 +54,9 @@ chcon -R unconfined_u:object_r:user_home_t:s0 /home/vagrant/.ssh
 
 # Bring the system up to date
 yum -y update
+
+# Temporary fix until Fedora fixes its rabbitmq policy
+sed -i s/SELINUX=enforcing/SELINUX=disabled/ /etc/selinux/config
+
 %end
 
